Fix header block alignment issue and hide search for temporarily for desktop

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -56,3 +56,9 @@
 		padding-left: 0;
 	}
 }
+
+.title-bars.medium-shrink.title-bar-right {
+	@include breakpoint(medium) {
+		display: none;
+	}
+}
